# iot-project

./: .gitignore  README.md  voice_server.py
ekran_modulu/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
ekran_modulu/main/: CMakeLists.txt  config.h  display.h  idf_component.yml  main.c  ui_ai.c  ui_ai.h  ui_idle.c  ui_pomodoro.c  ui_pomodoro.h  ui_sensor.c  ui_sensor.h  ui_voice.c
fan_modulu/: CMakeLists.txt  README_FAN_TEST.md
fan_modulu/main/: CMakeLists.txt  config.h  fan.c  fan.h  main.c
main/: CMakeLists.txt  config.h  display.c  display.h  i2s_mic.c  i2s_mic.h  i2s_player.c  i2s_player.h  idf_component.yml  lang.h  main.c  pomodoro.c  pomodoro.h  voice_client.c
main/ui/: display.c  ui_ai.c  ui_idle.c  ui_idle.h  ui_pomodoro.c  ui_pomodoro.h  ui_sensor.c  ui_sensor.h  ui_voice.c  ui_voice.h
mert/: .gitignore  CMakeLists.txt  implementation_plan.md  requirements.txt  sdkconfig.defaults  task.md  voice_server.py  walkthrough.md
mert/.cache/clangd/index/: animimg001.c.42AB930D112FA70A.idx  animimg002.c.ED0DDCA4BCD61BB9.idx  animimg003.c.13433C1622E2A183.idx  config.h.E6AEF1F269F8A1E3.idx  display.c.2BE49D5EC69CFF9B.idx  display.h.1E4A997A6144BABE.idx  (+573 more)
mert/main/: CMakeLists.txt  config.h  i2s_mic.c  i2s_player.c  lang.h  main.c  pomodoro.c  pomodoro.h  voice_client.c  voice_client.h
mert/main/ui/: ui_ai.c  ui_idle.c  ui_pomodoro.c  ui_sensor.c
samet/: app.py  test_command_detection.py  test_piper.py  test_piper3.py
samet/konusma_esp32/: CMakeLists.txt
samet/konusma_esp32/main/: CMakeLists.txt  idf_component.yml  main.c
