idf_component_register(
    SRCS
        "main.c"
        "pomodoro.c"
        "i2s_mic.c"
        "i2s_player.c"
        "voice_client.c"
        "ui/display.c"
        "ui/ui_idle.c"
        "ui/ui_pomodoro.c"
        "ui/ui_sensor.c"
        "ui/ui_voice.c"
        "ui/ui_ai.c"
    INCLUDE_DIRS "." "ui"
    REQUIRES
        esp_wifi
        nvs_flash
        esp_http_client
        driver
        esp_event
        esp_timer
        esp_adc
        lvgl
        esp_lcd_ili9341
        mbedtls
)